--- a/src/index.css
+++ b/src/index.css
@@ -64,3 +64,12 @@ input{
     padding:15px;
 }
 
+.symbol{
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    font-size: 2rem;
+    margin-top:5rem;
+    font-weight: 900;
+}
+
